<resources>
    <string name="app_name">Marketplace</string>

    <string name="co_connexion">Sign In</string>

    <string name="insc_client">Sign Up</string>
    <string name="insc_username">Username</string>
    <string name="insc_password">Password</string>
    <string name="insc_email">Email</string>
    <string name="insc_rib">Credit Card</string>

    <string name="insc_postalAddress">Address</string>
    <string name="insc_manRB">Man</string>
    <string name="insc_womanRB">Woman</string>
    <string name="insc_surname">First Name</string>
    <string name="insc_name">Last Name</string>
    <string name="insc_inscrireBT">Sign Up</string>
    <string name="insc_fournisseur">I\'m a Supplier</string>


    <string name="inscfo_title">Sign Up as a Supplier </string>
    <string name="inscfo_username">Username</string>
    <string name="inscfo_password">Password</string>
    <string name="inscfo_email">Email</string>
    <string name="inscfo_postalAddress">Postal address</string>
    <string name="inscfo_rib">Credit Card </string>
    <string name="inscfo_raisonSociale">Social Reason</string>
    <string name="inscfo_buttonSubscribe">Sign Up</string>


    <string name="home">Articles</string>
    <string name="basket">Orders</string>
    <string name="account">Account</string>

    <string name="home_fo">Home</string>
    <string name="add">Add</string>
    <string name="account_fo">Account</string>

    <string name="rs_util_fo">Social Reason</string>
    <string name="rib_util_fo">Credit Card</string>
    <string name="addr_util_fo">Address</string>
    <string name="pass_util_fo">Password</string>
    <string name="mail_util_fo">Email</string>
    <string name="modif_util_fo">Update</string>
    <string name="lbl_modif_utilFo">Edit Profile</string>
    <string name="ajout_article">Add new article</string>
    <string name="EtAddFo">Name</string>
    <string name="addArticleUtilFo">Add</string>
    <string name="prix_util_fo_art">Price</string>
    <string name="qte_utilfo_art">Qte</string>
    <string name="desc_utilfo_art">Description</string>
</resources>
