<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgimg">

    <TextView
        android:id="@+id/lbl_maj_profil_fo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/lbl_modif_utilFo"
        android:textColor="#0C0B0B"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/rs_modif_utilFo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:autofillHints="@string/rs_util_fo"
        android:ems="10"
        android:hint="@string/rs_util_fo"
        android:inputType="textPersonName"
        android:textColor="#131111"
        android:textColorHighlight="#6E3D1D"
        android:textColorHint="#120E0E"
        android:textColorLink="#6E3D1D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_maj_profil_fo" />

    <EditText
        android:id="@+id/rib_modif_utilFo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/rib_util_fo"
        android:ems="10"
        android:hint="@string/rib_util_fo"
        android:inputType="textPersonName"
        android:textColor="#090808"
        android:textColorHint="#171515"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rs_modif_utilFo" />

    <EditText
        android:id="@+id/addr_modif_utilFo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:width="300dp"
        android:autofillHints="@string/addr_util_fo"
        android:ems="10"
        android:hint="@string/addr_util_fo"
        android:inputType="textPostalAddress"
        android:textColor="#0C0B0B"
        android:textColorHint="#130F0F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rib_modif_utilFo" />

    <EditText
        android:id="@+id/pass_modif_utilFo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/pass_util_fo"
        android:ems="10"
        android:hint="@string/pass_util_fo"
        android:inputType="textPassword"
        android:textColor="#121010"
        android:textColorHint="#150E0E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addr_modif_utilFo" />

    <EditText
        android:id="@+id/mail_modif_utilFo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/mail_util_fo"
        android:ems="10"
        android:hint="@string/mail_util_fo"
        android:inputType="textEmailAddress"
        android:textColor="#171414"
        android:textColorHint="#100C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_modif_utilFo" />

    <Button
        android:id="@+id/modif_utilFo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:background="#2B5285"
        android:text="@string/modif_util_fo"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_modif_utilFo"
        app:layout_constraintVertical_bias="0.193" />

</androidx.constraintlayout.widget.ConstraintLayout>